# FloatWindowDemo

./: .gitignore  settings.gradle.kts  update_config.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/floatwindowdemo/: MainActivity.kt
app/src/main/java/com/example/floatwindowdemo/manager/: AuctionManager.kt  GameController.kt  GameManager.kt  OcrManager.kt  ScreenCaptureManager.kt  ScriptExecutor.kt
app/src/main/java/com/example/floatwindowdemo/service/: AutomationService.kt  FloatWindowService.kt
app/src/main/java/com/example/floatwindowdemo/utils/: CommonUtil.kt  ConfigManager.kt  DensityUtil.kt  GameConfig.kt  NetworkUtil.kt  OpencvUtil.kt  SequenceClicker.kt  YoloUtil.kt
app/src/main/java/com/example/floatwindowdemo/view/: DraggableFloatBall.kt  GeneralSettingsFragment.kt  OtherSettingsFragment.kt
app/src/main/jni/: CMakeLists.txt  yolov8n_jni.cpp
app/src/main/res/drawable/: circle_button_bg.xml  float_ball_bg.xml  ic_pause.xml  ic_play.xml  ic_resume.xml  ic_settings.xml  shape_toast_bg.xml
app/src/main/res/layout/: activity_main.xml  float_window.xml  fragment_general_settings.xml  fragment_other_settings.xml  item_role_config.xml  layout_toast.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
